add deploy script

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "sample-chat",
   "version": "0.1.0",
+  "homepage": "https://nolking.github.io/sample-web-chat/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
